# xml2json_sample

./: CMakeLists.txt
src/: xerces-c-3.2.4.patch  xerces-c.patch
src/MemParse/: Common.cpp  Common.h  ExcelSharder.cpp  ExcelSharder.h  ExcelSharderEmListener.cpp  ExcelSharderEmListener.h  ExcelSharderTailHandler.cpp  ExcelSlicer.cpp  ExcelSlicer.h  ExcelSlicerEmListener.cpp  ExcelSlicerEmListener.h  ExcelSlicerTailHandler.cpp  JsonTransformer.cpp  JsonTransformer.h  MemParseHandlers.cpp  MemParseHandlers.h  ShardHandler.cpp  ShardHandler.h  ShardParser.cpp  ShardParser.h  WordSectPrTagParser.cc  WordSectPrTagParser.h  XML2JsonParser.cpp  XML2JsonParser.h  Xml2JsonCommon.cpp  Xml2JsonCommon.h  Xml2JsonCommonInternal.h
src/include/xercesc/framework/: XMLElementDecl.hpp
src/include/xercesc/internal/: ReaderMgr.hpp  XMLReader.hpp
src/include/xercesc/parsers/: SAXParser.hpp
src/include/xercesc/sax/: DocumentHandler.hpp  HandlerBase.hpp
test/: Main.cpp  PreAction.cpp
test/html/: file_manager.js  index.html  pre.js  queue.js  xml2json_bin.js  xml2json_bin.wasm
